syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "User.proto";

option java_package = "io.toxa108.pokerito.logicservice.proto";
option java_multiple_files = true;

service TableService {
    rpc CreateTable (TableRequest) returns (TableResponse);
    rpc GetTable (TableRequest) returns (TableResponse);
    rpc AddUserToTable (AddUserToTableRequest) returns (TableResponse);
}

message TableRequest {
    string name = 1;
}

message TableResponse {
    string name = 1;
    repeated User users = 2;
}

message AddUserToTableRequest {
    string tableName = 1;
    User user = 2;
}

